# meida

./: nvs3000.sln
c++11/: Handler.h  ReadMe.txt  ThreadGuard.cpp  ThreadGuard.h  c++11.cpp  c++11.vcxproj  c++11.vcxproj.filters  interruptibleThread.h  stdafx.cpp
client/: Hello.ice  client.cpp  client.vcxproj  client.vcxproj.filters  config.client
glog-master/: UpgradeLog.htm
hkdevice/: HikDeviceProcesser.cpp  HikDeviceProcesser.h  LoginOperatoin.cpp  PtzControl.cpp  SdkUsers.cpp  SdkUsers.h  StreamOperation.cpp  StreamOperation.h  hkdevice.vcxproj  hkdevice.vcxproj.filters
hktest/: avdemuxer.h
jrtplib-3.11.1/build_x64/: ALL_BUILD.vcxproj  (+10 more)
media/: CMakeLists.txt  DeviceProcesser.h  PSBuffer.cpp  PSBuffer.h  RTPSender.cpp  RTPSender.h  RTPSendercpp.cpp  WorkorQueue.cpp  WorkorQueue.h  application.xml  buffer.cpp  buffer.h  config.admin  config.grid  config.mediaclient  config.mediaserver  config.server  main.cpp  media.cpp  media.h  media.vcxproj  media.vcxproj.filters  mediastream.cpp  mediastream.h  msgthread.h  plugins.h  psheader.h  stdafx.cpp  stream.cpp  stream.h  stream.ice  streamI.cpp  streamI.h  threadpool.h  threadsafequeue.h  utility.h
media/ices/: stream.ice
mediaclinet/: ReadMe.txt  config.client  mediaclinet.cpp  mediaclinet.vcxproj  mediaclinet.vcxproj.filters  stdafx.cpp
nvs3000/: AbstractOperation.h  CallInfo.cpp  CallInfo.h  Catalog.cpp  Catalog.h  ControlParam.h  Device.cpp  Device.h  DeviceManager.cpp  DeviceManager.h  DeviceProcesser.cpp  DeviceProcesser.h  GBMessage.h  Gateway.ice  Hello.ice  HelloI.cpp  HelloI.h  HikDevice.h  HikDeviceProcesser.cpp  HikDeviceProcesser.h  LoginOperatoin.cpp  LoginOperatoin.h  MediaClient.cpp  Operation.ice  OperationServer.cpp  OperationServer.h  Plugins.h  ProcesserManager.cpp  ProcesserManager.h  ReadMe.txt  StreamOperation.h  WorkQueue.cpp  WorkQueue.h  WorkorQueue.cpp  WorkorQueue.h  config.server  mediaclient.h  nvs3000.cpp  nvs3000.vcxproj  nvs3000.vcxproj.filters  (+5 more)
(+94 files in other folders)
